[package]
name = "wkd-checker"
version = "0.1.0"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
bytes = "0.5.3"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.7.1"
