[package]
name = "wkd-checker"
version = "0.1.1"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
edition = "2018"
description = "Checks OpenPGP keys deployed via Web Key Directory for correctness"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.7.1"
sequoia-openpgp = "0.14.0"
zbase32 = "0.1.2"
sha1 = "0.6.0"
futures = "0.3.4"
http = "0.2"
